[package]
name = "state_graph"
version = "0.1.0"
authors = ["Caleb Stanford <caleb.pirsquared@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
disjoint-sets = "0.4.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.21"
time = { version = "0.3.11", features = ["formatting", "macros"] }

[lib]
doctest = false

[[bin]]
name = "example_gen"
test = false

[[bin]]
name = "run_all"
test = false

[[bin]]
name = "run_compare"
test = false

[[bin]]
name = "run_example"
test = false
