[package]
name = "guided_digraph"
version = "0.1.1"
authors = ["Caleb Stanford <cdstanford@ucdavis.edu>"]
edition = "2021"
license = "MIT"
description = "A data structure for incremental live and dead state detection in an abstract transition system"
repository = "https://github.com/cdstanford/gid"
readme = "README.md"

[dependencies]
disjoint-sets = "0.4.2"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.26"
time = { version = "0.3.14", features = ["formatting", "macros"] }

[lib]
doctest = false

[[bin]]
name = "example_gen"
test = false

[[bin]]
name = "run_all"
test = false

[[bin]]
name = "run_compare"
test = false

[[bin]]
name = "run_example"
test = false
